# dbrew

./: .clang-tidy  .clang_complete  .dir-locals.el  .gitignore  .travis.yml  BUGS  CONCEPTS  Makefile  Makefile.am  README.md  TODO  branchtest.c  config.h.in  dbrew.config  dbrew.files  dbrew.includes  gen_header_compdb.sh  meson.build  meson_options.txt  spec.c  spec.h  stencil.c  strcmp.c  test.c
examples/: .gitignore  Makefile  matrix.c  meson.build  simple.c  stencil.c  strcmp.c  vector.c
llvm/: .gitignore  Doxyfile  Makefile  meson.build
llvm/benchmark/: Makefile  benchmark-line.c  benchmark.c  benchmark.sh  timer.c  timer.h
llvm/examples/: .gitignore  Makefile  spmv-generator.py  spmv-matrix.gen  spmv.c
llvm/include/: dbrew-llvm.h  llbasicblock-internal.h  llcommon-internal.h  llcommon.h  lldecoder.h  llengine.h  llflags-internal.h  llfunction-internal.h  llfunction.h  llinstruction-internal.h  lloperand-internal.h  llregfile-internal.h  llsupport-internal.h  llsupport.h
llvm/src/: llbasicblock.c  lldecoder.c  llengine.c  llflags.c  llfunction.c  llinstruction-callret.c  llinstruction-gp.c  llinstruction-libc.c  llinstruction-sse.c  llinstruction-stack.c  llinstruction.c  lloperand.c  llregfile.c  llsupport.cc  meson.build
llvm/test/: cases-condition.inc  cases-instr-gp.inc  cases-instr-sse.inc  cases-operands-gp.inc  cases.inc  correctness.c
llvm/tests/: test-common.h  test-driver.c  test.py
llvm/tests/cases/complex/: constant-load-multiple.S  constant-load-multiple.S.expect  constant-load-rip.S  constant-load-rip.S.expect  loop-count.S  loop-count.S.expect  loop-count.c  loop-count.c.expect  loop-count.s  loop-count.s.expect  loop-simple.S  many-predecessors.S.expect  overflow-dynamic.S  overflow-dynamic.S.expect  overflow.S  param-double.S  pointer-adjustment-lea.S.expect  pointer-adjustment.S  pointer-adjustment.S.expect  recursion.S  recursion.S.expect  registers.S.expect  sse-high-part-override.S.expect  stackframe.S  stackframe.S.expect  static-loop.S  static-loop.S.expect  triangular-numbers-recursive.S  triangular-numbers-recursive.S.expect  triangular-numbers.S  triangular-numbers.S.expect  triangular-numbers.c  triangular-numbers.c.expect  triangular-numbers.s  triangular-numbers.s.expect
llvm/tests/cases/complex/stencil/: double.S.expect  (+10 more)
llvm/tests/cases/dbrew/: binding.S  binding.S.expect
llvm/tests/cases/instructions/: call-indirect.S  call-indirect.S.expect  call.S  call.S.expect  cmovs.S  cmovs.S.expect  cmovz.S  cmovz.S.expect  cmovz.s  cmovz.s.expect  constant-load-multiple.S  constant-load-multiple.S.expect  constant-load-rip.S.expect  constant-load-rip.s  constant-load-rip.s.expect  constant-load.s  constant-load.s.expect  imul.S  imul.S.expect  lea.S  lea.S.expect  loop-simple.S.expect  loop-simple.s  loop-simple.s.expect  many-predecessors.S  many-predecessors.S.expect  mov-scaling.S  mov-scaling.S.expect  mov-scaling.s  mov-scaling.s.expect  movdqu.S  movdqu.S.expect  movhpd.S  movhpd.S.expect  movhps.S  movhps.S.expect  movlpd.S  movlps.S  movlps.S.expect  movpd.S  (+47 more)
llvm/tests/cases/stencil/: double.S  double.S.expect  long.S.expect
llvm/tests/cases/vectorize/: double-addsd.S  double-addsd.S.expect  double-addsd.s  double-addsd.s.expect  double-mulsd.S  double-mulsd.S.expect  double-mulsd.s  double-mulsd.s.expect  int-add.S  int-add.S.expect  int-add.s  int-add.s.expect
src/: brew.c  buffers.c  colors.c  config.c  dbrew.c  decode.c  emulate.c  engine.c  error.c  expr.c  generate.c  instr-descriptors.c  instr.c  introspect.c  meson.build  printer.c  snippets.c  stubs.c  vector.c
tests/: Makefile  README.md  TODO.md  branchtest.c  meson.build  op-inc.s  op-pxor.s  op-tls.c  stencil-apply-g-fp.s  test-driver-decode-buferr.c  test-driver-decode.c  test-driver-gen.c  test-driver-generate.c  test-driver.c  test-meson.py  test-parser.c  test.c  test.exp-O0  test.exp-O2  test.pl  test.py
tests/cases/: op-inc.s  op-inc.s.expect  op-jbe.s  op-je.s  op-je.s.expect  op-jo.s.expect  op-jp.s  op-jp.s.expect  op-js-1.s.expect  op-jz-dynamic.s.expect  op-jz.s  op-jz.s.expect  op-mov-r9d.s
tests/cases/decode/: avx.s  avx.s.expect  group-f7.s  group-f7.s.expect  it-adc.s  it-adc.s.expect  it-add-buferr.s  it-add-buferr.s.expect  it-add-buferr.s.expect_stderr  it-add.s  it-add.s.expect  it-and-imm.s  it-and-imm.s.expect  it-and.s  it-and.s.expect  it-bsf.s  it-bsf.s.expect  it-bsr.s  it-bsr.s.expect  it-cltq.s  it-cltq.s.expect  it-cmovcc.s  it-cmovcc.s.expect  it-cmp.s  it-cmp.s.expect  it-inc-dec.s  it-inc-dec.s.expect  it-lea.s  it-lea.s.expect  it-leave.s  it-leave.s.expect  it-mov.s  it-mov.s.expect  it-movsx.s  it-movsx.s.expect  it-movzx.s  it-movzx.s.expect  it-mul-div.s  it-mul-div.s.expect  it-neg-not.s  (+48 more)
tests/cases/examples/: stencil-5-avx.c  stencil-5-avx.c.expect  stencil-5.c  stencil-6-avx.c  stencil-6-avx.c.expect  stencil-6.c  stencil-7-avx.c  stencil-7.c  stencil-7.c.expect  stencil-8-avx.c  stencil-8.c  stencil-8.c.expect
tests/cases/generator/: avx.s  avx.s.expect  it-add.s  it-add.s.expect  it-and-imm.s  it-and-imm.s.expect  it-bsf.s  it-bsf.s.expect  it-bsr.s  it-bsr.s.expect  it-call.s  it-call.s.expect  it-cmp.s  it-cmp.s.expect  it-mov.s  it-mov.s.expect  it-movzx.s  it-movzx.s.expect  it-pxor.s  it-pxor.s.expect  it-rep.s  it-rep.s.expect  it-setcc.s  it-setcc.s.expect  it-test.s  it-test.s.expect  it-undef.c  it-undef.c.expect_stderr  modrm.s  modrm.s.expect  op-bsf-min.s  op-ret.c  op-ret.c.expect  sse.s  sse.s.expect
tests/cases/integration/: fp.s  fp.s.expect  it-and.s  it-and.s.expect  it-cltq.s  it-cltq.s.expect  it-pxor.s  op-bsf-min.s  op-bsf.s  op-call.s  op-call.s.expect  op-call.s.expect_filter  op-inc.s.expect  op-ja.s  op-ja.s.expect  op-jbe.s  op-jbe.s.expect  op-je.s  op-je.s.expect  op-jo.s  op-jo.s.expect  op-jp.s  op-jp.s.expect  op-js-1.s  op-js-1.s.expect  op-js-2.s  op-js-2.s.expect  op-jz-dynamic.s  op-jz-dynamic.s.expect  op-jz.s  op-jz.s.expect  op-leave.s  op-leave.s.expect  op-mov-mem.s  op-mov-mem.s.expect  op-mov-r9d.s  op-mov-r9d.s.expect  op-movzx.s  op-movzx.s.expect  op-push-pop.s  (+10 more)
(+38 files in other folders)
