sources = [
  'llbasicblock.c',
  'lldecoder.c',
  'llengine.c',
  'llflags.c',
  'llfunction.c',
  'llinstruction-callret.c',
  'llinstruction-gp.c',
  'llinstruction-gp.c',
  'llinstruction-libc.c',
  'llinstruction-sse.c',
  'llinstruction-stack.c',
  'llinstruction.c',
  'lloperand.c',
  'llregfile.c',
  'llsupport.cc',
]

libdbrew_llvm = static_library('dbrew_llvm',
                               sources,
                               dependencies: [libllvm],
                               include_directories: [llvm_inc, inc],
                               c_args: [main_lib_args],
                               cpp_args: [cpp_flags],
                               pic: false,
                               install: true)
